# remine-ansible-entrega

./: .gitignore  .terraform.lock.hcl  .tool-versions  README.md  Vagrantfile  ansible-lint.yml  ansible.cfg  inventory.ini  main.tf  outputs.tf  playbook.yml  provider.tf  pyproject.toml  rds.tf  requirements.yml  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
.github/workflows/: main.yml
roles/asdf_ruby/defaults/: main.yml
roles/asdf_ruby/files/: puma.rb
roles/asdf_ruby/handlers/: main.yml
roles/asdf_ruby/molecule/default/: converge.yml  molecule.yml
roles/asdf_ruby/tasks/: main.yml
roles/asdf_ruby/templates/: puma-daemon.service.j2  secrets.yml.j2
roles/asdf_ruby/tests/: test.yml
roles/asdf_ruby/vars/: main.yml
roles/database/defaults/: main.yml
roles/database/tasks/: main.yml
roles/database/templates/: database.yml.j2
roles/nginx/defaults/: main.yml
roles/nginx/files/: redmine
roles/nginx/handlers/: main.yml
roles/nginx/tasks/: main.yml
roles/nginx/templates/: redmine.j2
roles/redmine/defaults/: main.yml
roles/redmine/handlers/: main.yml
roles/redmine/meta/: main.yml
roles/redmine/molecule/default/: molecule.yml
roles/redmine/tasks/: main.yml
roles/redmine/templates/: configuration.yml.j2  database.yml.j2
roles/redmine/tests/: test.yml
roles/redmine/vars/: main.yml
